# Coffee_delivery_robot

./: README.md
Coffee_delivery_nano/ros_ws/devel/: .catkin  .rosinstall  local_setup.sh
Coffee_delivery_nano/ros_ws/src/: requirement.txt
Coffee_delivery_nano/ros_ws/src/tarkbot_calibrate/: CMakeLists.txt  package.xml
Coffee_delivery_nano/ros_ws/src/tarkbot_demo/: README.md
Coffee_delivery_nano/ros_ws/src/tarkbot_demo/skeleton_follow/: CMakeLists.txt  package.xml
Coffee_delivery_nano/ros_ws/src/tarkbot_demo/skeleton_follow/launch/: tarkbot_skeleton_follow.launch
Coffee_delivery_nano/ros_ws/src/tarkbot_demo/skeleton_follow/msg/: astra_sdk_body.msg  astra_sdk_bodynumber.msg  astra_sdk_joint.msg
Coffee_delivery_nano/ros_ws/src/tarkbot_demo/skeleton_follow/script/: astra_sdk_show.py
Coffee_delivery_nano/ros_ws/src/tarkbot_demo/skeleton_follow/src/: astra_sdk_demo.cpp
Coffee_delivery_nano/ros_ws/src/tarkbot_description/: README.md
Coffee_delivery_nano/ros_ws/src/tarkbot_doc/: README.md
mech270_pi/agent/: agent_2.py  agent_go.py  camera_check.py  sound_check.py  test_record.py  test_vision.py  test_vlm_move.py  test_vlm_vqa.py  utils_agent.py  utils_asr.py  utils_camera.py  utils_drag_teaching.py  utils_gripper.py  utils_llm.py  utils_pump.py  utils_robot.py  utils_tts.py  utils_vlm.py  utils_vlm_move.py
mech270_pi/single_test/: API_KEY.py  audio_format_test.py  camera_check.py  checkself.py  gripper_test.py  mecharm_270_test.py  rasp_mycobot_test_gui.py  release_all.py  robot_tools.py  send_angles.py  send_coords.py  test_api.py  xbox_control.py
(+541 files in other folders)
